scss/settings.scss
$global-width: 1200px !default;
$base-font-size: 16px !default;
$base-font-family: "Helvetica, sans-serif" !default;

$grid-columns: 12 !default;
$grid-column-gutter: 10px !default;

$grid-breakpoints: (small: 0, medium: 640px, large: 1024px, xlarge: 1200px, xxlarge: 1440px) !default;
$grid-breakpoints-classes: medium, large, xlarge !default;

$grid-column-width: calc(#{100% / $grid-columns} - #{2 * $grid-column-gutter}) !default;

$grid-order-points: 12 !default;

$heading-font-sizes: (large: (h1: 52px, h2: 42px, h3: 32px, h4: 22px, h5: 16px, h6: 13px), medium: (h1: 42px, h2: 37px, h3: 32px, h4: 17px, h5: 14px, h6: 12px)) !default;

$z-indexes: (modal: 1000)

